# Customer-Churn-Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
api/: main.py  schemas.py
models/: aft_model.pkl  aft_model_metadata.json
notebooks/: aft_model.ipynb  cleaning_nb.ipynb  cox_model.ipynb  feature_engineering_nb.ipynb  train_aft_model.ipynb
src/: cleaning.py  config.py  feature_engineering.py  predict.py
tests/: test_api.py  test_cleaning.py  test_feature_engineering.py
