[project]
name = "churn-prediction"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "lifelines",
    "joblib",
    "pandas",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pyyaml",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]